# Deepshield-MVP

./: .env  .gitignore  LICENSE  docker-compose.yml  railway.toml  render.yaml
deepshield-backend/: .dockerignore  .env  .env.example  Dockerfile  deployment.yaml  devinapps.yaml  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-base.txt  requirements.txt
deepshield-backend/app/: config.py  main.py
deepshield-backend/app/api/: __init__.py  deps.py
deepshield-backend/app/api/endpoints/: __init__.py  admin.py  ai.py  content.py  notifications.py  users.py
deepshield-backend/app/core/: __init__.py  blockchain.py  config.py  dataset_config.py  security.py  security.py.bak
deepshield-backend/app/db/: mongodb.py
deepshield-backend/app/models/: __init__.py  content.py  user.py
deepshield-backend/app/services/: __init__.py
deepshield-backend/app/services/ai/: __init__.py  content_moderation.py  deepfake_detection.py  face_verification.py  keyword_blacklist.py  mock_deepfake.py  mock_face.py
deepshield-backend/app/services/api/: __init__.py  google_vision.py  instagram.py  mock_vision.py  translation.py
deepshield-backend/app/services/notifications/: __init__.py  base.py  content_notifications.py  email.py  mock.py  sms.py  websocket.py
deepshield-backend/app/tests/: test_account_verification.py  test_ai_services.py  test_api_integrations.py  test_health.py  test_imports.py  test_multilingual.py  test_notifications.py
deepshield-backend/clean_venv/: pyvenv.cfg
deepshield-frontend/: .dockerignore  .env  .env.example  Dockerfile  index.html  (+3 more)
(+19 files in other folders)
