[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-multipart = "^0.0.18"
motor = "^3.6.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pillow = "^10.3.0"
tensorflow = "^2.18.0"
transformers = "^4.48.0"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
aiofiles = "^24.1.0"
tensorflow-hub = "^0.16.1"
mediapipe = "^0.10.20"
opencv-python-headless = "^4.10.0.84"
deepface = "^0.0.93"
insightface = "^0.7.3"
torch = {version = "^2.5.1", extras = ["cpu"]}
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
onnxruntime = "^1.20.1"
tensorflow-cpu = "^2.18.0"
torchvision = {version = "^0.20.1", python = ">=3.12,<3.13", platform = "linux"}
torchaudio = {version = "^2.5.1", python = ">=3.12,<3.13", platform = "linux"}
google-cloud-vision = "^3.9.0"
pydantic-settings = "^2.7.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
